--- a/map.html
+++ b/map.html
@@ -29,6 +29,12 @@
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
         }).addTo(map);
+        var circle = L.circle([51.508, -0.11], {
+    color: 'red',
+    fillColor: '#f03',
+    fillOpacity: 0.5,
+    radius: 500
+}).addTo(map);
 
         // เพิ่มปุ่มแสดงตำแหน่งปัจจุบัน
 var marker = L.marker([51.5, -0.09]).addTo(map);
